martian-derive/tests/ui_martian_type/derive_on_unit.rs
use martian_derive::MartianType;

#[derive(MartianType)]
struct UnitStruct;

fn main() {}
